--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -78,6 +78,8 @@
      <Compile Include="Assets\scripts\recipePusher.cs" />
      <Compile Include="Assets\scripts\recipie.cs" />
      <Compile Include="Assets\scripts\text.cs" />
+     <None Include="Assets\Plugins\GitHub\Editor\CREDITS.txt" />
+     <None Include="Assets\Plugins\GitHub\Editor\EULA.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
