--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
 ###
 # Unity folders and files
 ###
-[Aa]ssets/AssetStoreTools*
-[Bb]uild/
-[Ll]ibrary/
-[Ll]ocal[Cc]ache/
-[Oo]bj/
-[Tt]emp/
-[Uu]nityGenerated/
+/[Aa]ssets/AssetStoreTools*
+/[Bb]uild/
+/[Ll]ibrary/
+/[Ll]ocal[Cc]ache/
+/[Oo]bj/
+/[Tt]emp/
+/[Uu]nityGenerated/
 # file on crash reports
 sysinfo.txt
-# Unity3D generated meta files
-*.pidb.meta
+
 
 ###
 # VS/MD solution and project files
